Style fix for form elements Adjust height, min-weight and text alignment for date and time inputs (for iOS).

--- a/src/includes/_forms.scss
+++ b/src/includes/_forms.scss
@@ -195,7 +195,7 @@ input {
     &[type="date"], &[type="time"], &[type="datetime-local"] {
         min-height: 1.1rem;
         box-sizing: content-box;
-        text-align: inherit;
+        text-align: left;
     }
     // Fix min-width for iOS
     &[type="date"] {
